[package]
name = "kvtree"
version = "0.1.0"
edition = "2021"
readme = "readme.md"
include = ["Cargo.toml", "readme.md", "license", "src/**"]
license = "BSD-3-Clause"

[features]
default = ["rayon", "core-storage"]
rayon = ["dep:rayon", "indexmap/rayon"]
core-storage = []

[dependencies]
indexmap = "2.1.0"
tuplify = "1.1.4"
ahash = "0.8.3"
rayon = { version = "1.7.0", optional = true }
itertools = "0.11.0"
