[package]
name = "kvtree"
version = "0.1.0"
edition = "2021"
authors = ["Alois Masanell <massou@cantina.space>"]
description = "Heterogenous in memory key value tree storage"
keywords = ["key-value", "in-memory", "container", "tree"]
readme = "readme.md"
include = ["Cargo.toml", "readme.md", "license", "src/**"]
license = "BSD-3-Clause"
categories = ["rust-patterns", "data-structures"]
homepage = "https://github.com/cantina-space/kvtree"
documentation = "https://docs.rs/kvtree"
repository = "https://github.com/cantina-space/kvtree"

[features]
default = ["rayon", "core-storage"]
rayon = ["dep:rayon", "indexmap/rayon"]
core-storage = []

[dependencies]
indexmap = "2.1.0"
tuplify = "1.1.4"
ahash = "0.8.3"
rayon = { version = "1.7.0", optional = true }
itertools = "0.11.0"
